searching and subscribing for new images
