# src/routes/user.js
@@ -1,0 +1,8 @@
+import express from 'express'
+import userController from '../controllers/userController'
+
+const router = express();
+
+router.post('/subscribe',userController.subscribe)
+
+export default router
